feat : qna로 변경, 관련추가